fix: link is aligned below rest of text

--- a/ui/tree/css/_tree.scss
+++ b/ui/tree/css/_tree.scss
@@ -74,10 +74,6 @@
     color: $c-primary;
   }
 
-  comment a {
-    vertical-align: middle;
-  }
-
   comment.truncated {
     cursor: pointer;
   }
